k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thermostat
  namespace: monitoring
  labels:
    app: thermostat
spec:
  selector:
    app: thermostat
  ports:
    - name: http
      port: 80
      targetPort: 8001
