k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thermostat
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-prod
spec:
  tls:
    - hosts:
        - thermostat.kamenet.org
      secretName: thermostat-tls
  rules:
    - host: thermostat.kamenet.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thermostat
                port:
                  name: http
